--- a/src/GCIntranet/GCIntranet.csproj
+++ b/src/GCIntranet/GCIntranet.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="2.0.96" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\" />
+  </ItemGroup>
+
 </Project>
