Add site menu and breadcrumb partials.
This turns the example page into a normal content page example.

--- a/src/GCIntranet/GCIntranet.csproj
+++ b/src/GCIntranet/GCIntranet.csproj
@@ -17,4 +17,9 @@
     <Folder Include="wwwroot\lib\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="wwwroot\ajax\sitemenu-en.html" />
+    <None Include="wwwroot\ajax\sitemenu-fr.html" />
+  </ItemGroup>
+
 </Project>
